syntax = "proto3";

option java_package = "com.example.wallet_flutter";
option java_outer_classname = "Protos";
//option swift_class_prefix = "Protos";
option objc_class_prefix = "Protos";

message Coin {
    bytes public_key = 1;
    bytes private_key = 2;
    string wif = 3;
    string address = 4;
    string rel = 5;
}
message Coins{
    repeated Coin list = 1;
    string base = 2;
}

message CoinsList{
    repeated Coins list = 1;
}

message Wallet{
    string mnemonic = 1;
    CoinsList coins_list = 2;
}
message Wallets{
    repeated Wallet list = 1;
}
message Output{
    string address = 1;
    double value = 2;
    string memo = 3;
}
message Outputs{
    repeated Output list = 1;
}

message Tx{
    string tx_hex = 1;
}

message Config{
    string rel = 1;
    string base = 9;
    string protocol = 2;
    uint32 code = 3;
    uint32 precision = 4;
    uint32 private = 5;
    uint32 public = 6;
    string prefix = 7;
    uint32 chain_id = 8;
}
message Configs{
    repeated Config list = 1;
}

message GetWalletInput{
    string mnemonic = 1;
    Configs configs = 2;
}
message GenSendTxInput{
    Config config = 1;
    string api = 2;
    bytes private_key = 3;
    bytes public_key = 4;
    Outputs outputs = 6;
}
message WebPlatformChannel{
    string method_name = 1;
    bytes input = 2;
}