syntax = "proto3";
import "pb/config.proto";

enum WalletKind { BIP32 = 0; }
message Wallet {
  string mnemonic = 1;
  map<string, CoinKey> coinkeys = 2;
  WalletKind wallet_kind = 3;
  map<string, config.Option> options = 4;
}
message CoinKey {
  bytes public_key = 1;
  bytes private_key = 2;
  string wif = 3;
  string address = 4;
}
message Wallets { repeated Wallet list = 1; }

message GetWalletsRequest {
  string mnemonic = 1;
  config.Configs configs = 2;
}